@@ -1,6 +1,10 @@
 /***********************************************************************
 X3 ChangeLog
 
+2008-11-12  Matthew Beeching  <jobe@mdbnet.co.uk>
+
+	* tools/db.php: Added sample DB parser script
+
 2008-11-06  Alex Schumann  <rubin@afternet.org>
 
 	src/modcmd.c,Makefile.in,src/Makefile.in,configure.in,src/config.h.in:
